[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = "Practical guides of LangChain"
authors = ["xleven <xleven@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sse-starlette = "^1.6.5"
tomli-w = "^1.0.0"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
langserve = ">=0.0.16"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
pygithub = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
